# algo-analyser

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  clear-all  compile  configure  configure.ac  gui
headers/: algorithme.h  analyse.h  charset.h  fichier.h  functions.h  key.h  lib.h  programme.h  structure.h  variable.h
lib/libamalgo/: AUTHORS  ChangeLog  Makefile.am  configure.ac  libalgo.cpp  libamalgo.cpp  libamalgo.h
sources/: Makefile.am  algorithme.cpp  analyse.cpp  charset.cpp  fichier.cpp  functions.cpp  key.cpp  lib.cpp  main.cpp  programme.cpp  structure.cpp  variable.cpp
tests/: affichagetableau.algo  courbe.algo  date.algo  determinant.algo  eq2deg.algo  mastermind.algo  moyenneTableau.algo
