bin_PROGRAMS=analyser

analyser_SOURCES= algorithme.cpp analyse.cpp charset.cpp fichier.cpp functions.cpp key.cpp lib.cpp main.cpp programme.cpp structure.cpp variable.cpp algorithme.h analyse.h charset.h fichier.h functions.h key.h lib.h programme.h structure.h variable.h

DEFAULT_INCLUDES=-I../headers
#analyserdir=$(includedir)/headers
#analyser_HEADERS=algorithme.h analyse.h charset.h fichier.h functions.h key.h lib.h programme.h structure.h variable.h